# tardigrade

./: .gitignore  CMakeLists.txt  README.md  config.cmake.in
.github/workflows/: ci.yml
example/: CMakeLists.txt  example.cpp
include/tardigrade/: attachment.hpp  director.hpp  entity.hpp  render_attachment.hpp  render_target.hpp  scene.hpp  services.hpp  tardigrade.hpp  tick_attachment.hpp  to_string.hpp
include/tardigrade/detail/: delta_time.hpp  ptr.hpp  render_list.hpp  type_id.hpp  type_id_hasher.hpp
src/: attachment.cpp  build_version.hpp.in  director.cpp  entity.cpp  scene.cpp
